--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -333,7 +333,7 @@ layers:
                             text:
                                 visible: true
                                 font:
-                                    fill: [0.290,0.902,0.910]
+                                    fill: [0.451,1.000,0.302]
                     natl-park-labels-z4-z6:
                         filter: { $zoom: [4,5,6] }
                         draw:
@@ -387,7 +387,7 @@ layers:
                                 visible: true
                                 priority: 42
                                 font:
-                                    fill: [0.290,0.902,0.910]
+                                    fill: [0.451,1.000,0.302]
                     green-areas-z6:
                         # mojave national preserve
                         filter: { $zoom: [6] }
@@ -538,6 +538,14 @@ layers:
                 early2:
                     filter: { $zoom: { min: 12, max: 14 } }
                     draw: { icons: { text: { font: { size: 11px } } } }
+            restaurant:
+                filter:
+                    kind: [restaurant,cafe,fast_food]
+                draw:
+                    text:
+                        visible: true
+                        font:
+                            fill: [1.000,1.000,0.302]
             university:
                 filter:
                     all:
