--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -383,16 +383,19 @@ layers:
                     - man_made: [pier]
             draw:
                 lines:
-                    color: [[14,[0.400,0.561,0.718]],[15,[0.239,0.145,0.627]]]
+                    # color: [[14,[0.400,0.561,0.718]],[15,[0.239,0.145,0.627]]]
+                    color: [0.192,0.115,0.510]
                     width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[18,2.5px],[19,4px],[20,5px]]
                     outline:
-                        color: [[14,[0.400,0.561,0.718]],[16,[0.263,0.467,0.690]]]
+                        # color: [[14,[0.400,0.561,0.718]],[16,[0.263,0.467,0.690]]]
+                        color: [0.000,0.414,0.539]
                         width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
             pedestrian:
                 filter: { highway: pedestrian }
                 draw:
                     lines:
-                        color: [[14,[0.400,0.561,0.718]],[15,[0.109,0.169,0.320]]]
+                        # color: [[14,[0.400,0.561,0.718]],[15,[0.109,0.169,0.320]]]
+                        color: [0.192,0.115,0.510]
                         width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[18,2.5px],[19,6px],[20,12px]]
                         outline:
                             color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
@@ -406,7 +409,7 @@ layers:
                 filter: { landuse_kind: [pedestrian,common] }
                 draw:
                     lines:
-                        color: [0.465,0.385,0.820]
+                        color: [0.192,0.115,0.510]
                         outline:
                             color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
                             width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
@@ -433,7 +436,7 @@ layers:
                 draw:
                     lines:
                         style: airport-glow
-                        color: [[12,[1.000,0.518,0.424]],[16,[0.748,0.000,0.748]]]
+                        color: [[12,[1.000,0.518,0.424]],[16,[1.000,0.564,0.312]]]
                         width: [[12,0px],[13,1px],[15,6px],[17,30px],[20,60px]]
                         outline:
                             width: 0px
@@ -441,11 +444,11 @@ layers:
                 filter: { aeroway: runway }
                 draw:
                     lines:
-                        color: [0.748,0.000,0.748]
+                        color: [1.000,0.564,0.312]
                         width: [[9,0px],[11,1px],[13,3px],[15,12px],[17,60px],[20,70m]]
                         outline:
                             style: airport-glow
-                            color: [0.748,0.000,0.748]
+                            color: [1.000,0.564,0.312]
                             width: [[9,2px],[20,10px]]
 
 styles:
