remind need to add building-labels.yaml later

--- a/tron.yaml
+++ b/tron.yaml
@@ -11,6 +11,7 @@ import:
     - layers/roads-labels.yaml
     - layers/transit.yaml
     - layers/buildings.yaml
+    #- layers/building-labels.yaml
     - layers/landuse.yaml
     - layers/boundaries.yaml
     - layers/places.yaml
